Migrate IOUtils#closeQuietly to try-with-resources or Solrs IOUtils