@@ -18,18 +18,17 @@ package org.apache.solr.cloud;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.io.filefilter.RegexFileFilter;
 import org.apache.commons.io.filefilter.TrueFileFilter;
 import org.apache.commons.lang3.StringUtils;
@@ -214,15 +213,11 @@ public class ZkCLITest extends SolrTestCaseJ4 {
 
     String fromZk =
         new String(zkClient.getData("/solr.xml", null, null, true), StandardCharsets.UTF_8);
-    File locFile = new File(SOLR_HOME + File.separator + "solr-stress-new.xml");
-    InputStream is = new FileInputStream(locFile);
-    String fromLoc;
-    try {
-      fromLoc = new String(IOUtils.toByteArray(is), StandardCharsets.UTF_8);
-    } finally {
-      IOUtils.closeQuietly(is);
+    Path locFile = Path.of(SOLR_HOME, "solr-stress-new.xml");
+    try (InputStream is = Files.newInputStream(locFile)) {
+      String fromLoc = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+      assertEquals("Should get back what we put in ZK", fromZk, fromLoc);
     }
-    assertEquals("Should get back what we put in ZK", fromZk, fromLoc);
   }
 
   @Test
@@ -243,17 +238,11 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     ZkCLI.main(args);
 
     byte[] fromZk = zkClient.getZooKeeper().getData("/state.json", null, null);
-    File locFile = new File(SOLR_HOME + File.separator + "solr-stress-new.xml");
-    InputStream is = new FileInputStream(locFile);
-    byte[] fromLoc;
-    try {
-      fromLoc = IOUtils.toByteArray(is);
-      ZLibCompressor zLibCompressor = new ZLibCompressor();
-      fromLoc = zLibCompressor.compressBytes(fromLoc);
-    } finally {
-      IOUtils.closeQuietly(is);
+    Path locFile = Path.of(SOLR_HOME, "solr-stress-new.xml");
+    try (InputStream is = Files.newInputStream(locFile)) {
+      byte[] fromLoc = new ZLibCompressor().compressBytes(is.readAllBytes());
+      assertArrayEquals("Should get back what we put in ZK", fromLoc, fromZk);
     }
-    assertArrayEquals("Should get back what we put in ZK", fromLoc, fromZk);
   }
 
   @Test
@@ -280,12 +269,12 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "list"};
 
     ByteArrayOutputStream byteStream = new ByteArrayOutputStream();
-    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8.name());
+    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8);
     ZkCLI.setStdout(myOut);
 
     ZkCLI.main(args);
 
-    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8.name());
+    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8);
     String separator = System.lineSeparator();
     assertEquals("/ (1)" + separator + " /test (0)" + separator + separator, standardOutput);
   }
@@ -296,12 +285,12 @@ public class ZkCLITest extends SolrTestCaseJ4 {
     String[] args = new String[] {"-zkhost", zkServer.getZkAddress(), "-cmd", "ls", "/test"};
 
     ByteArrayOutputStream byteStream = new ByteArrayOutputStream();
-    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8.name());
+    final PrintStream myOut = new PrintStream(byteStream, false, StandardCharsets.UTF_8);
     ZkCLI.setStdout(myOut);
 
     ZkCLI.main(args);
 
-    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8.name());
+    final String standardOutput = byteStream.toString(StandardCharsets.UTF_8);
     String separator = System.lineSeparator();
     assertEquals(
         "/test (1)" + separator + " /test/path (0)" + separator + separator, standardOutput);
